# customer-service-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eval.yml
eval/: cases.jsonl  rubrics.json
scripts/: chat.py  eval.py
src/agent/: llm.py  loop.py  prompts.py  tools.py
src/harness/: graders.py  metrics.py  runner.py  trajectory.py
src/knowledge/: faq.json
tests/: test_loop.py  test_tools.py
